other/require-unique-service-selector/.chainsaw-test/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc01
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: svc02
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: busybox
  type: ClusterIP
